add appointment done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/app.css" />
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css' rel='stylesheet' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Baer's Demo.</title>
+    <title>Portal</title>
   </head>
   <body>
     <div id="root"></div>
